--- a/ReSharperFixieRunner/ReSharperFixieRunner.csproj
+++ b/ReSharperFixieRunner/ReSharperFixieRunner.csproj
@@ -46,6 +46,12 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AboutAction.cs" />
+    <Compile Include="UnitTestProvider\DeclaredElementProvider.cs" />
+    <Compile Include="UnitTestProvider\FixiePsiFileExplorer.cs" />
+    <Compile Include="UnitTestProvider\FixieTestClassElement.cs" />
+    <Compile Include="UnitTestProvider\FixieTestFileExplorer.cs" />
+    <Compile Include="UnitTestProvider\FixieTestProvider.cs" />
+    <Compile Include="UnitTestProvider\UnitTestElementFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Actions.xml" />
