--- a/ReSharperFixieRunner/ReSharperFixieRunner.csproj
+++ b/ReSharperFixieRunner/ReSharperFixieRunner.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AboutAction.cs" />
     <Compile Include="UnitTestProvider\Elements\FixieTestMethodElement.cs" />
+    <Compile Include="UnitTestProvider\FixieTestMetadataExplorer.cs" />
     <Compile Include="UnitTestProvider\PsiUnitTestIdentifier.cs" />
     <Compile Include="UnitTestProvider\DeclaredElementProvider.cs" />
     <Compile Include="UnitTestProvider\Elements\FixieBaseElement.cs" />
