--- a/ReSharperFixieRunner/ReSharperFixieRunner.csproj
+++ b/ReSharperFixieRunner/ReSharperFixieRunner.csproj
@@ -37,6 +37,7 @@
     <Reference Include="Fixie">
       <HintPath>..\packages\Fixie.0.0.1.98\lib\net45\Fixie.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,6 +52,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AboutAction.cs" />
+    <Compile Include="UnitTestProvider\ClassFilter.cs" />
+    <Compile Include="UnitTestProvider\FixieConvention.cs" />
     <Compile Include="UnitTestProvider\Elements\FixieTestMethodElement.cs" />
     <Compile Include="UnitTestProvider\FixieTestMetadataExplorer.cs" />
     <Compile Include="UnitTestProvider\PsiUnitTestIdentifier.cs" />
