Moving test discover back into PsiFileExplorer

--- a/ReSharperFixieRunner.Tests/ReSharperFixieRunner.Tests.csproj
+++ b/ReSharperFixieRunner.Tests/ReSharperFixieRunner.Tests.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Fixie">
+      <HintPath>..\packages\Fixie.0.0.1.101\lib\net45\Fixie.dll</HintPath>
+    </Reference>
     <Reference Include="FluentAssertions">
       <HintPath>..\packages\FluentAssertions.2.1.0.0\lib\net45\FluentAssertions.dll</HintPath>
     </Reference>
