--- a/ReSharperFixieRunner/ReSharperFixieRunner.csproj
+++ b/ReSharperFixieRunner/ReSharperFixieRunner.csproj
@@ -51,11 +51,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UnitTestProvider\FixieConventionCheck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AboutAction.cs" />
     <Compile Include="UnitTestProvider\ClassFilter.cs" />
     <Compile Include="UnitTestProvider\FixieConvention.cs" />
     <Compile Include="UnitTestProvider\Elements\FixieTestMethodElement.cs" />
+    <Compile Include="UnitTestProvider\FixieConventionInfo.cs" />
     <Compile Include="UnitTestProvider\FixieTestMetadataExplorer.cs" />
     <Compile Include="UnitTestProvider\PsiUnitTestIdentifier.cs" />
     <Compile Include="UnitTestProvider\DeclaredElementProvider.cs" />
