--- a/ReSharperFixieRunner/packages.config
+++ b/ReSharperFixieRunner/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Fixie" version="0.0.1.101" targetFramework="net45" />
+  <package id="JetBrains.ReSharper.SDK" version="8.0.1243" targetFramework="net45" />
 </packages>
