--- a/ReSharperFixieRunner/ReSharperFixieRunner.csproj
+++ b/ReSharperFixieRunner/ReSharperFixieRunner.csproj
@@ -60,6 +60,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FixieTaskRunner.cs" />
     <Compile Include="UnitTestProvider\FixieConventionDomainLoader.cs" />
     <Compile Include="UnitTestProvider\FixieConventionLoader.cs" />
     <Compile Include="UnitTestProvider\FixieConventionCheck.cs" />
