--- a/ReSharperFixieTestRunner/ReSharperFixieTestRunner.csproj
+++ b/ReSharperFixieTestRunner/ReSharperFixieTestRunner.csproj
@@ -56,6 +56,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\JetBrains.ReSharper.SDK.8.0.1243\build\JetBrains.ReSharper.SDK.Targets" Condition="Exists('..\packages\JetBrains.ReSharper.SDK.8.0.1243\build\JetBrains.ReSharper.SDK.Targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>copy $(TargetDir)*.* $(LOCALAPPDATA)\JetBrains\ReSharper\v8.0\plugins\ReSharperFixieRunner</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
