--- a/ReSharperFixieTestRunner/ReSharperFixieTestRunner.csproj
+++ b/ReSharperFixieTestRunner/ReSharperFixieTestRunner.csproj
@@ -63,7 +63,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\JetBrains.ReSharper.SDK.8.0.1243\build\JetBrains.ReSharper.SDK.Targets" Condition="Exists('..\packages\JetBrains.ReSharper.SDK.8.0.1243\build\JetBrains.ReSharper.SDK.Targets')" />
   <PropertyGroup>
-    <PostBuildEvent>copy $(TargetDir)*.* $(LOCALAPPDATA)\JetBrains\ReSharper\v8.0\plugins\ReSharperFixieRunner</PostBuildEvent>
+    <PostBuildEvent>if "$(TEAMCITY_VERSION)" == ""  copy $(TargetDir)*.* $(LOCALAPPDATA)\JetBrains\ReSharper\v8.0\plugins\ReSharperFixieRunner</PostBuildEvent>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
