Xunit test runners for TeamCity

--- a/ReSharperFixieTestRunner/ReSharperFixieTestRunner.csproj
+++ b/ReSharperFixieTestRunner/ReSharperFixieTestRunner.csproj
@@ -19,7 +19,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -27,7 +27,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -63,7 +63,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\JetBrains.ReSharper.SDK.8.0.1243\build\JetBrains.ReSharper.SDK.Targets" Condition="Exists('..\packages\JetBrains.ReSharper.SDK.8.0.1243\build\JetBrains.ReSharper.SDK.Targets')" />
   <PropertyGroup>
-    <PostBuildEvent>if "$(TEAMCITY_VERSION)" == ""  copy $(TargetDir)*.* $(LOCALAPPDATA)\JetBrains\ReSharper\v8.0\plugins\ReSharperFixieRunner</PostBuildEvent>
+    <PostBuildEvent>if "$(TEAMCITY_VERSION)" == ""  copy $(TargetDir)$(TargetName).* $(LOCALAPPDATA)\JetBrains\ReSharper\v8.0\plugins\ReSharperFixieRunner</PostBuildEvent>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
