--- a/ReSharperFixieTestProvider/ReSharperFixieTestProvider.csproj
+++ b/ReSharperFixieTestProvider/ReSharperFixieTestProvider.csproj
@@ -38,6 +38,7 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
     <PlatformTarget>AnyCPU</PlatformTarget>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
