--- a/ResharperFixieTestRunner.Tests/ResharperFixieTestRunner.Tests.csproj
+++ b/ResharperFixieTestRunner.Tests/ResharperFixieTestRunner.Tests.csproj
@@ -33,6 +33,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Fixie, Version=0.0.1.106, Culture=neutral, processorArchitecture=MSIL">
