Better AppDomain support

--- a/ReSharperFixieTestProvider/ReSharperFixieTestProvider.csproj
+++ b/ReSharperFixieTestProvider/ReSharperFixieTestProvider.csproj
@@ -50,6 +50,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppDomainWrapper.cs" />
     <Compile Include="FixieConventionDomainLoader.cs" />
     <Compile Include="FixieConventionLoader.cs" />
     <Compile Include="FixieConventionCheck.cs" />
