--- a/RemoteRunner/FixieRemoteRunner.csproj
+++ b/RemoteRunner/FixieRemoteRunner.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="RemoteRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReSharperListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ReSharperFixieTestRunner\ReSharperFixieTestRunner.csproj">
