A bit more reorg

--- a/ReSharperFixieTestRunner/ReSharperFixieTestRunner.csproj
+++ b/ReSharperFixieTestRunner/ReSharperFixieTestRunner.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="AppDomainWrapper.cs" />
     <Compile Include="AttributeNames.cs" />
+    <Compile Include="IException.cs" />
     <Compile Include="IRemoteRunner.cs" />
     <Compile Include="ITestResult.cs" />
     <Compile Include="NodeRunner.cs" />
