--- a/RemoteRunner/FixieRemoteRunner.csproj
+++ b/RemoteRunner/FixieRemoteRunner.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExceptionInfo.cs" />
     <Compile Include="RemoteRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReSharperListener.cs" />
