--- a/fixieplugin.nuspec
+++ b/fixieplugin.nuspec
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
-        <id>ReSharperFixieRunner</id>
+        <id>FixiePlugin</id>
         <version>0.1.0</version>
         <title>Fixie Unit Test Framework Support</title>
         <authors>John Stovin</authors>
