towards parameterised tests

--- a/FixieTestExample/FixieTestExample/FixieTestExample.csproj
+++ b/FixieTestExample/FixieTestExample/FixieTestExample.csproj
@@ -33,6 +33,10 @@
     <Reference Include="Fixie">
       <HintPath>..\packages\Fixie.0.0.1.98\lib\net45\Fixie.dll</HintPath>
     </Reference>
+    <Reference Include="Should.Fluent, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ShouldFluent.1.1.19\lib\Should.Fluent.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
