--- a/FixiePlugin.Tests/packages.config
+++ b/FixiePlugin.Tests/packages.config
@@ -3,5 +3,6 @@
   <package id="Fixie" version="0.0.1.120" targetFramework="net45" />
   <package id="FluentAssertions" version="2.2.0.0" targetFramework="net45" />
   <package id="JetBrains.ReSharper.SDK" version="8.0.1243" targetFramework="net45" />
+  <package id="JetBrains.ReSharper.SDK" version="8.1.555" targetFramework="net45" />
   <package id="NSubstitute" version="1.6.1.0" targetFramework="net45" />
 </packages>
