--- a/FixiePlugin/packages.config
+++ b/FixiePlugin/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Fixie" version="0.0.1.120" targetFramework="net45" />
   <package id="JetBrains.ReSharper.SDK" version="8.0.1243" targetFramework="net45" />
+  <package id="JetBrains.ReSharper.SDK" version="8.1.555" targetFramework="net45" />
 </packages>
