--- a/fixieplugin.8.1.nuspec
+++ b/fixieplugin.8.1.nuspec
@@ -15,11 +15,11 @@
         <copyright>Copyright 2013 John Stovin</copyright>
         <tags>resharper unittest fixie</tags>
         <dependencies>
-            <dependency id="ReSharper" version="8.0" />
+            <dependency id="ReSharper" version="8.1" />
         </dependencies>
     </metadata>
     <files>
-        <file src="bin\Release\Fixie.dll" target="ReSharper\v8.0\plugins\Fixie.dll" />
-        <file src="bin\Release\FixiePlugin.dll" target="ReSharper\v8.0\plugins\FixiePlugin.dll" />
+        <file src="bin\v8.1\Release\Fixie.dll" target="ReSharper\v8.1\plugins\Fixie.dll" />
+        <file src="bin\v8.1\Release\FixiePlugin.dll" target="ReSharper\v8.1\plugins\FixiePlugin.dll" />
     </files>
 </package>
