--- a/fixieplugin.nuspec
+++ b/fixieplugin.nuspec
@@ -12,13 +12,15 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>A ReSharper unit test provider for the Fixie framework</description>
         <releaseNotes>Initial public beta</releaseNotes>
-        <copyright>Copyright 2013 John Stovin</copyright>
+        <copyright>Copyright 2013-2014 John Stovin</copyright>
         <tags>resharper unittest fixie</tags>
         <dependencies>
-            <dependency id="ReSharper" version="8.1" />
+            <dependency id="ReSharper" version="[8.0, 8.2)" />
         </dependencies>
     </metadata>
     <files>
+        <file src="bin\v8.0\Release\Fixie.dll" target="ReSharper\v8.0\plugins\Fixie.dll" />
+        <file src="bin\v8.0\Release\FixiePlugin.dll" target="ReSharper\v8.0\plugins\FixiePlugin.dll" />
         <file src="bin\v8.1\Release\Fixie.dll" target="ReSharper\v8.1\plugins\Fixie.dll" />
         <file src="bin\v8.1\Release\FixiePlugin.dll" target="ReSharper\v8.1\plugins\FixiePlugin.dll" />
     </files>
