Added ReSharper 8.2 EAP support

--- a/FixiePlugin.Tests/packages.config
+++ b/FixiePlugin.Tests/packages.config
@@ -4,5 +4,6 @@
   <package id="FluentAssertions" version="2.2.0.0" targetFramework="net45" />
   <package id="JetBrains.ReSharper.SDK" version="8.0.1243" targetFramework="net45" />
   <package id="JetBrains.ReSharper.SDK" version="8.1.555" targetFramework="net45" />
+  <package id="JetBrains.ReSharper.SDK" version="8.2.921-EAP" targetFramework="net45" />
   <package id="NSubstitute" version="1.6.1.0" targetFramework="net45" />
 </packages>
