--- a/FixiePlugin/packages.config
+++ b/FixiePlugin/packages.config
@@ -3,4 +3,5 @@
   <package id="Fixie" version="0.0.1.120" targetFramework="net45" />
   <package id="JetBrains.ReSharper.SDK" version="8.0.1243" targetFramework="net45" />
   <package id="JetBrains.ReSharper.SDK" version="8.1.555" targetFramework="net45" />
+  <package id="JetBrains.ReSharper.SDK" version="8.2.921-EAP" targetFramework="net45" />
 </packages>
