--- a/fixieplugin.nuspec
+++ b/fixieplugin.nuspec
@@ -15,7 +15,7 @@
         <copyright>Copyright © 2013-2014 John Stovin</copyright>
         <tags>resharper unittest fixie</tags>
         <dependencies>
-            <dependency id="ReSharper" version="[8.0, 8.2)" />
+            <dependency id="ReSharper" version="[8.0, 8.3)" />
         </dependencies>
     </metadata>
     <files>
@@ -23,5 +23,7 @@
         <file src="bin\v8.0\Release\FixiePlugin.dll" target="ReSharper\v8.0\plugins\FixiePlugin.dll" />
         <file src="bin\v8.1\Release\Fixie.dll" target="ReSharper\v8.1\plugins\Fixie.dll" />
         <file src="bin\v8.1\Release\FixiePlugin.dll" target="ReSharper\v8.1\plugins\FixiePlugin.dll" />
+      <file src="bin\v8.2\Release\Fixie.dll" target="ReSharper\v8.2\plugins\Fixie.dll" />
+      <file src="bin\v8.2\Release\FixiePlugin.dll" target="ReSharper\v8.2\plugins\FixiePlugin.dll" />
     </files>
 </package>
